k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: web
  template: 
    metadata: 
      labels: 
        app: web
    spec: 
      containers: 
        - name: client
          image: jamespool/multi-client
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          ports: 
            - containerPort: 3000
