k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-storage  # must same
          persistentVolumeClaim:
              claimName: database-persistent-volume-claim
      containers:
      - name: postgres
        image: postgres
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-storage  # must same
            mountPath: /var/lib/postgresql/data
            subPath: postgres
