k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: worker-deplyment
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: worker
  template: 
    metadata: 
      labels: 
        app: worker
    spec: 
      containers: 
        - name: worker
          image: jamespool/multi-worker
          # resources:
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
